syntax = "proto3";

package grpc;

option go_package="./internal/proto";

message UpdateMetricsJSONRequest {
    string id = 1;
    string type = 2;
    double value = 3;
    int64 delta = 4;
}

message UpdateMetricsJSONResponse {
    bool success = 1;
}

service Metrics {
    rpc UpdateMetricsJSON(UpdateMetricsJSONRequest) returns (UpdateMetricsJSONResponse);
}